[tool.poetry]
name = "panel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
django-rq = "^2.4.0"
"luma.led_matrix" = "^1.5.0"
djangorestframework = "^3.12.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
